--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 deep-translator==1.11.4
 Django==5.0.2
+django-cors-headers==4.3.1
 django-rest-framework==0.1.0
 djangorestframework==3.14.0
 idna==3.6
+python-decouple==3.8
 pytz==2024.1
 requests==2.31.0
 soupsieve==2.5
