--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,10 @@
+version: '3'
+
 services:
-  - name: chatbot-allpe
-    type: web
-    buildCommand: pip install -r requirements.txt
-    startCommand: python manage.py runserver 0.0.0.0:8000
+  chatbot-allpe:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8000:8000"
+    command: python manage.py runserver 0.0.0.0:8000
