--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,3 @@
-blinker==1.8.0
-ChatterBot==1.0.4
-chatterbot-corpus==1.2.0
-click==8.1.7
-flask==3.0.3
-importlib-metadata==7.1.0
-itsdangerous==2.2.0
-Jinja2==3.1.3
-joblib==1.4.0
-MarkupSafe==2.1.5
-mathparse==0.1.2
-nltk==3.8.1
-Pint==0.23
-pymongo==3.13.0
-python-dateutil==2.7.5
-pytz==2024.1
-PyYAML==3.13
-regex==2024.4.16
-six==1.16.0
-SQLAlchemy==1.2.19
-tqdm==4.66.2
-typing-extensions==4.11.0
-werkzeug==3.0.2
-zipp==3.18.1
+Flask==2.1.0
+nltk==3.6.5
+scikit-learn==0.24.2
